Add register, list, retrieve user views; Update urls with token and users views; Add auth and JWT configs to settings and .env

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
 SECRET_KEY=your-secret-key-here
 
+ACCESS_TOKEN_LIFETIME_MINUTES=5
+REFRESH_TOKEN_LIFETIME_HOURS=24
+
 DB_NAME=event_db
 DB_USER=postgres
 DB_PASSWORD=password
