Update .env with redis config vars; Update settings with django_filters, redis and celery configs

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,7 @@ DB_USER=postgres
 DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432
+
+REDIS_BROKER_HOSTNAME=redis://redis
+REDIS_PORT=6379
+REDIS_DB_NUMBER=0
