--- a/.env.sample
+++ b/.env.sample
@@ -12,3 +12,8 @@ DB_PORT=5432
 REDIS_BROKER_HOSTNAME=redis://redis
 REDIS_PORT=6379
 REDIS_DB_NUMBER=0
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_HOST_USER=your-google-email
+EMAIL_HOST_PASSWORD=google-account-app-password-not-user-password
