Minor fix in settings and .env file

--- a/.env.sample
+++ b/.env.sample
@@ -6,8 +6,9 @@ REFRESH_TOKEN_LIFETIME_HOURS=24
 DB_NAME=event_db
 DB_USER=postgres
 DB_PASSWORD=password
-DB_HOST=localhost
+DB_HOST=db
 DB_PORT=5432
+DB_TIMEOUT=30
 
 REDIS_BROKER_HOSTNAME=redis://redis
 REDIS_PORT=6379
